style.css
/* ... */
@keyframes toggleAnimation {
    0% {
        top: 5px;
        right: 5px;
        width: 50px;
        height: 50px;
        border-radius: 50%;
    }

    100% {
        top: 48%;
        left: 50%;
        width: 95%;
        height: 95%;
        border-radius: 36px 36px 280.5px 280.5px;
        transform: translate(-50%, -50%);
    }

}

@keyframes animate {
    from {
        transform: scale(0);
    }

    to {
        transform: scale(1);
    }
}

svg.about-img {
    cursor: pointer;
    /* border: solid red; */
}

#blob1 {}

#blob2 {
    fill-opacity: 0;
}

#glow {
    /* Remove the visibility and animation-play-state properties / / Add an animation property with a name, duration, and iteration count */
    animation: breathe 6s infinite ease-in-out;
}

/* Remove the :hover pseudo-class */

/* Define a custom animation with @keyframes and a name */
@keyframes breathe {

    /* Set the fill-opacity to 0 at the start and end of the animation */
    0%,
    100% {
        fill-opacity: 0;
    }

    /* Set the fill-opacity to 1 at the middle of the animation */
    50% {
        fill-opacity: 1;
    }
}

@keyframes scroll {
    from {
        transform: translateX(0);
    }

    to {
        transform: translateX(calc(-100% - 1vw));
    }
}

/* ---------------ANIMATION ENDS--------------- */


* {
    margin: 0%;
    padding: 0%;
    box-sizing: border-box;
}


/* ---------------------======================COLOR PALATE======================--------------------- */
:root {}

/* ---------------------========================================================--------------------- */


html,
body {
    width: 100%;
    height: 100%;
    color: white;
}

html {
    background-color: transparent;
}

body {
    background-color: #101010;
}

#main {
    position: relative;
    overflow: hidden;
}

#intro {
    overflow: hidden;
    width: 100%;
    height: 100vh;
    /* border: #EB00FF solid 2px; */
    /* background-color: #101010; */
}

#about {
    width: 100%;
    height: 100vh;
    /* background-color: #101010; */

}

#projects {
    width: 100%;
    height: 100vh;
    /* background-color: #101010; */
}

#skills {
    width: 100%;
    height: 100vh;
    /* background-color: #101010; */
}

#connect {
    width: 100%;
    height: 100vh;
    /* background-color: #101010; */
}

header {
    width: 100%;
    top: 0;
    left: 0;
    z-index: 10;
    width: auto;
    transition: .6s ease;
}

header ul {
    list-style: none;
}

header a {
    color: white;
    text-decoration: none;
    letter-spacing: 1px;
}


.hover-effect {
    background: linear-gradient(90deg, #5329FC 0%, #EB00FF 100%);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    transition: width 0.5s ease-out;
}

.nav-link:hover::before {
    width: 105%;
    transform-origin: center;
}

.back-text {
    color: #FFF;
    font-family: Michroma;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    opacity: 0.15;
}

.front-text {
    color: #FFF;
    font-family: Syne;
    font-style: normal;
    font-weight: 800;
    line-height: normal;
}

.hover-image {
    position: absolute;
    height: 350px;
    width: 650px;
    overflow: hidden;
    z-index: -1;
    left: 0;
    top: 0;
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    filter: blur(3px);
    transition: all 0.5s ease;
    /* background-color: red; */
}

.cards.java {
    border: 1px solid #DB5631;
    background: rgba(219, 86, 49, 0.10);
}

.cards.cpp {
    border: 1px solid #0B52A5;
    background: rgba(11, 82, 165, 0.10);
}

.cards.python {
    border: 1px solid #0F5F9B;
    background: rgba(15, 95, 155, 0.10);
}

.cards.js {
    border: 1px solid #FFD600;
    background: rgba(255, 214, 0, 0.10);
}

.cards.ts {
    border: 1px solid #0F5F9B;
    background: rgba(15, 95, 155, 0.10);
}

.cards.sass {
    border: 1px solid #ff80a6;
    background: rgba(235, 0, 255, 0.10);
}

.cards.react {
    border: 1px solid #30f1ff;
    background: rgba(0, 209, 255, 0.10);
}

.cards.nextJs {
    border: 1px solid #D9D9D9;
    background: rgba(217, 217, 217, 0.10);
}

.cards.bootStrap {
    border: 1px solid #5604FF;
    background: rgba(86, 4, 255, 0.10);
}

.cards.tailwind {
    border: 1px solid #00b7ff;
    background: rgba(0, 209, 255, 0.10);
}

.cards.git {
    border: 1px solid #FF5C00;
    background: rgba(255, 92, 0, 0.10);
}

.cards.figma {
    border: 1px solid #974dff;
    background: rgba(125, 70, 255, 0.146);
}

.cards.ai {
    border: 1px solid #ff6600;
    background: rgba(255, 92, 0, 0.10);
}

.cards.docker {
    border: 1px solid #00b7ff;
    background: rgba(0, 209, 255, 0.10);
}

.java h4 {
    color: #DB5631
}

.cpp h4 {
    color: #0B52A5;
}

.python h4 {
    color: #0F5F9B;
}

.js h4 {
    color: #FFD600;
}

.ts h4 {
    color: #0F5F9B;
}

.sass h4 {
    color: #ff80a6;
}

.react h4 {
    color: #30f1ff;
}

.nextJs h4 {
    color: #D9D9D9;
}

.bootStrap h4 {
    color: #5604FF;
}

.tailwind h4 {
    color: #00b7ff;
}

.git h4 {
    color: #FF5C00;
}

.figma h4 {
    color: #974dff;
}

.ai h4 {
    color: #ff6600;
}

.docker h4 {
    color: #00b7ff;
}

.tweet {
    transform: translateY(0.4vw) rotate(10deg);
}

.linkedin {
    transform: translateY(0.4vw) rotate(-10deg);
}

.pinterest {
    transform: translateY(0.4vw) rotate(10deg);
}

.insta {
    transform: translateY(0.4vw) rotate(-20deg);
}

.medium {
    transform: translateY(0.4vw) rotate(-5deg);
}

.github {
    transform: translateY(0.4vw) rotate(10deg);
}

footer {
    background-color: #101010;
    top: 0;
    left: 0;
    z-index: 10;
    width: auto;
    transition: .6s ease;
}
/* ... */

